# cs184_project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
cmake/: CompilerFlags.cmake  FetchGLEW.cmake  FetchGLFW.cmake  FetchGLI.cmake  FetchImGui.cmake  Fetchfpng.cmake
scripts/: compare_replay.py  render_camera_path.py  render_m7_animation_variants.sh  render_replay.py  smooth_recording.py
shaders/: composite_linear.frag  composite_tonemap.frag  fullscreen_quad.frag  fullscreen_quad.vert  fullscreen_quad_vk.frag  fullscreen_quad_vk.vert  tonemap_only.frag
src/: main.cpp
src/accel/: AABB.h  BVH.h  BVHNode.h  LightBVH.cpp  LightBVH.h  LightBVHNode.h  LightBVHSample.h  SAH_BVH.cpp  SAH_BVH.h
src/app/: Application.cpp  Application.h
src/application/: application.cpp  application.h  main.cpp
src/backend/: CUDABackend.cu  CUDABackend.h  OptiXBackend.cpp  OptiXBackend.cu  OptiXBackend.h  OptiXLaunchParams.h  OptiXPrograms.cu  OptiXProgramsGI.inl  OptiXProgramsPT.inl  OptiXSBTRecords.h  RayTracingBackend.h
src/core/: Camera.cpp  Camera.h  Halton.h  Math.cpp  Math.h  SceneCollider.cpp  SceneCollider.h  Transform.h  Types.h  VolumeDevice.cuh  VolumeMedium.h
src/cuda/: cuda_buffers.h  cuda_math.cuh  cuda_pathtracer.cu  cuda_scene.cpp  cuda_scene.h  cuda_types.h
src/display/: DisplayBackend.h  GLDisplay.cpp  GLDisplay.h  GLShaders.h  VulkanDisplay.cpp  VulkanDisplay.h
src/gpu/: AreaLightGPU.h  BRDF.h  DeviceScene.cu  DeviceScene.h  LightGPU.h  MaterialGPU.h  NRDHelpers.cuh  PoseUpdate.cu  PoseUpdate.h  Random.h  RayTypes.h  SHEnv.cuh  Sampling.h
src/gui/: GUI.cpp  GUI.h
src/interop/: VulkanImageInterop.cpp  VulkanImageInterop.h
src/pathtracer/: bsdf.cpp  camera.cpp  camera.h  pathtracer.cpp  raytraced_renderer.cpp  raytraced_renderer.h
src/postfx/: CompositePass.cpp  CompositePass.h  DLSSContext.cpp  DLSSContext.h  DLSSDContext.cpp  DLSSDContext.h  NRDContext.cpp  NRDContext.h
src/render/: AccumulationBuffer.cu  AccumulationBuffer.h  AuxBuffers.cu  AuxBuffers.h  DebugHeatmap.cu  DebugHeatmap.h  Finalizers.cuh  GBufferWriters.cuh  NEEHelpers.cuh  PathTraceHelpers.cuh  PathTraceKernel.cu  PathTraceKernel.h  PathTraceKernelSplit.cu  ReSTIR.cu  ReSTIR.h  ReSTIRDevice.cuh  ReSTIRGI.cu  ReSTIRGI.h  ReSTIRGIDevice.cuh  ReSTIRPT.cu  ReSTIRPT.h  Renderer.cpp  Renderer.h  Tonemapping.cu  Tonemapping.h  VolumeNEE.cuh  VolumeShadowCuda.cuh  VulkanSharedAuxBuffers.cpp  VulkanSharedAuxBuffers.h
src/scene/: Animation.h  AnimationEval.cpp  AnimationEval.h  AreaLight.h  Light.h  Material.h  Mesh.h  PbrtLoader.cpp  PbrtLoader.h  Scene.cpp  Scene.h  SceneCache.cpp  SceneCache.h  SceneLoader.cpp  SceneLoader.h  SceneTreeBuilder.cpp  SceneTreeBuilder.h  Texture.cpp  Texture.h  bbox.cpp  bvh.cpp  sphere.cpp  triangle.cpp  utils.cpp  utils.h
src/util/: CudaCheck.h  ImageWriter.cpp  ImageWriter.h  Log.h  Timer.h
tools/: compare_quality.py  detect_restir_blob.py  measure_shimmer.py  run_m7_blob_capture.sh  run_quality_sweep.sh  run_reference_sweep.sh  side_by_side.py
traj/recordings/: path_BistroExterior.json  path_BistroExterior_demo.json  path_BistroExterior_demo_smoothed.json  path_BistroInterior.json  path_BistroInterior_shorter.json  path_BistroInterior_smoothed.json  path_M7.json  path_M7_fast.json
